--- a/forum/templates/edit_forum_post.html
+++ b/forum/templates/edit_forum_post.html
@@ -3,33 +3,37 @@
     <title>FORUM</title>
 {% endblock meta %}
 {% block content %}
-    <div class="container px-4 mx-auto">
-        <div class="flex flex-col items-center justify-center h-screen">
-            <h3 class="mb-8 text-2xl font-semibold text-center">Create a post</h3>
-            <form action="" method="post" class="w-1/2 mx-auto">
-                {% csrf_token %}
-                <div class="mb-3">
-                    <label for="{{ form.title.id_for_label }}"
-                           class="block mb-2 text-sm font-medium">Title</label>
-                    <input type="text"
-                           id="{{ form.title.id_for_label }}"
-                           class="block w-full px-4 py-3 text-sm border border-gray-200 rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
-                           name="{{ form.title.name }}"
-                           value="{{ form.title.value|default:'' }}">
-                </div>
-                <div class="mb-3">
-                    <label for="{{ form.content.id_for_label }}"
-                           class="block mb-2 text-sm font-medium">Content</label>
-                    <textarea id="{{ form.content.id_for_label }}"
-                              class="block w-full px-4 py-3 text-sm border border-gray-200 rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
-                              name="{{ form.content.name }}"
-                              rows="10">{{ form.content.value|default:'' }}</textarea>
-                </div>
-                <button type="submit"
-                        class="w-full px-4 py-2 text-base font-semibold text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700">
-                    Edit
-                </button>
-            </form>
+    {% include "navbar.html" %}
+    <div class="w-full"
+         style="background: linear-gradient(153deg, #F09027 12.76%, #8CBEAA 71.77%)">
+        <div class="container px-4 mx-auto">
+            <div class="flex flex-col items-center justify-center h-screen">
+                <h3 class="mb-8 text-2xl font-semibold text-center">Create a post</h3>
+                <form action="" method="post" class="w-1/2 mx-auto">
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        <label for="{{ form.title.id_for_label }}"
+                               class="block mb-2 text-sm font-medium">Title</label>
+                        <input type="text"
+                               id="{{ form.title.id_for_label }}"
+                               class="block w-full px-4 py-3 text-sm border border-gray-200 rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
+                               name="{{ form.title.name }}"
+                               value="{{ form.title.value|default:'' }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="{{ form.content.id_for_label }}"
+                               class="block mb-2 text-sm font-medium">Content</label>
+                        <textarea id="{{ form.content.id_for_label }}"
+                                  class="block w-full px-4 py-3 text-sm border border-gray-200 rounded-lg focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none"
+                                  name="{{ form.content.name }}"
+                                  rows="10">{{ form.content.value|default:'' }}</textarea>
+                    </div>
+                    <button type="submit"
+                            class="w-full px-4 py-2 text-base font-semibold text-white bg-blue-600 border border-transparent rounded-md shadow-sm hover:bg-blue-700">
+                        Edit
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
 {% endblock content %}
