--- a/forum/templates/forum_post.html
+++ b/forum/templates/forum_post.html
@@ -3,113 +3,117 @@
     <title>FORUM</title>
 {% endblock meta %}
 {% block content %}
-    <div class="w-full max-w-screen-md px-4 mx-auto">
-        <div class="flex flex-col min-h-screen py-4 space-y-4">
-            <div class="p-4 bg-white border border-gray-300 rounded-md">
-                <h6 class="flex items-center mb-2 text-xs text-gray-500">
-                    <span>Posted by {{ post.user }}</span>
-                    <span class="mx-1">•</span>
-                    <span>{{ post.created_at|date:"d-m-Y" }}</span>
-                </h6>
-                <div class="mb-4 space-y-2">
-                    <h3 class="text-lg font-semibold">{{ post.title }}</h3>
-                    <p class="text-sm text-gray-800">{{ post.content }}</p>
+    {% include "navbar.html" %}
+    <div class="w-full"
+         style="background: linear-gradient(153deg, #F09027 12.76%, #8CBEAA 71.77%)">
+        <div class="w-full max-w-screen-md px-4 mx-auto mt-14">
+            <div class="flex flex-col min-h-screen py-4 space-y-4">
+                <div class="p-4 bg-white border border-gray-300 rounded-md">
+                    <h6 class="flex items-center mb-2 text-xs text-gray-500">
+                        <span>Posted by {{ post.user }}</span>
+                        <span class="mx-1">•</span>
+                        <span>{{ post.created_at|date:"d-m-Y" }}</span>
+                    </h6>
+                    <div class="mb-4 space-y-2">
+                        <h3 class="text-lg font-semibold">{{ post.title }}</h3>
+                        <p class="text-sm text-gray-800">{{ post.content }}</p>
+                    </div>
+                    <form id="post-reply-form" action="" method="post" class="space-y-3">
+                        <div>
+                            <label for="content" class="sr-only">Reply</label>
+                            <textarea id="content"
+                                      name="content"
+                                      placeholder="Add a comment"
+                                      rows="3"
+                                      class="block w-full px-4 py-3 text-sm border border-gray-200 rounded-lg focus:border-blue-200 focus:ring-blue-200 disabled:opacity-50 disabled:pointer-events-none"></textarea>
+                        </div>
+                        <button type="submit"
+                                class="w-full px-3 py-1.5 text-base font-medium text-white bg-blue-500 border border-transparent rounded-md shadow-sm hover:bg-blue-700">
+                            Reply
+                        </button>
+                    </form>
                 </div>
-                <form id="post-reply-form" action="" method="post" class="space-y-3">
-                    <div>
-                        <label for="content" class="sr-only">Reply</label>
-                        <textarea id="content"
-                                  name="content"
-                                  placeholder="Add a comment"
-                                  rows="3"
-                                  class="block w-full px-4 py-3 text-sm border border-gray-200 rounded-lg focus:border-blue-200 focus:ring-blue-200 disabled:opacity-50 disabled:pointer-events-none"></textarea>
-                    </div>
-                    <button type="submit"
-                            class="w-full px-3 py-1.5 text-base font-medium text-white bg-blue-500 border border-transparent rounded-md shadow-sm hover:bg-blue-700">
-                        Reply
-                    </button>
-                </form>
-            </div>
-            <div id="replies" class="space-y-3">
-                {% for reply in replies %}
-                    <div class="space-y-2.5 p-4 border border-gray-200 rounded-md post-reply-card"
-                         data-reply-id="{{ reply.id }}">
-                        <h6 class="flex items-center text-xs text-gray-500">
-                            <span class="font-bold text-black">{{ reply.user }}</span>
-                            <span class="mx-1">•</span>
-                            <span>{{ reply.created_at|date:"d-m-Y" }}</span>
-                            <div class="relative ml-auto">
-                                <button class="inline-flex items-center px-2 py-2 text-gray-700 dropdown-button hover:bg-gray-300 focus:outline-none"
-                                        aria-haspopup="true"
-                                        aria-expanded="false">
-                                    <svg class="w-3 h-3 text-gray-600"
-                                         xmlns="http://www.w3.org/2000/svg"
-                                         fill="none"
-                                         viewBox="0 0 24 24"
-                                         stroke="currentColor">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
-                                    </svg>
-                                </button>
-                                <ul class="absolute right-0 z-10 hidden w-40 mt-2 bg-white rounded-md shadow-lg dropdown-menu">
-                                    <li>
-                                        <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 dropdown-item edit-reply-btn hover:bg-gray-100">
-                                            Edit
-                                        </button>
-                                    </li>
-                                    <li>
-                                        <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 dropdown-item hover:bg-gray-100 delete-reply-btn">
-                                            Delete
-                                        </button>
-                                    </li>
-                                </ul>
-                            </div>
-                        </h6>
-                        <p class="text-gray-800 post-reply-card-content">{{ reply.content }}</p>
-                    </div>
-                {% endfor %}
+                <div id="replies" class="space-y-3">
+                    {% for reply in replies %}
+                        <div class="space-y-2.5 p-4 border bg-white border-gray-200 rounded-md post-reply-card"
+                             data-reply-id="{{ reply.id }}">
+                            <h6 class="flex items-center text-xs text-gray-500">
+                                <span class="font-bold text-black">{{ reply.user }}</span>
+                                <span class="mx-1">•</span>
+                                <span>{{ reply.created_at|date:"d-m-Y" }}</span>
+                                <div class="relative ml-auto">
+                                    <button class="inline-flex items-center px-2 py-2 text-gray-700 dropdown-button hover:bg-gray-300 focus:outline-none"
+                                            aria-haspopup="true"
+                                            aria-expanded="false">
+                                        <svg class="w-3 h-3 text-gray-600"
+                                             xmlns="http://www.w3.org/2000/svg"
+                                             fill="none"
+                                             viewBox="0 0 24 24"
+                                             stroke="currentColor">
+                                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7" />
+                                        </svg>
+                                    </button>
+                                    <ul class="absolute right-0 z-10 hidden w-40 mt-2 bg-white rounded-md shadow-lg dropdown-menu">
+                                        <li>
+                                            <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 dropdown-item edit-reply-btn hover:bg-gray-100">
+                                                Edit
+                                            </button>
+                                        </li>
+                                        <li>
+                                            <button class="block w-full px-4 py-2 text-sm text-left text-gray-700 dropdown-item hover:bg-gray-100 delete-reply-btn">
+                                                Delete
+                                            </button>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </h6>
+                            <p class="text-gray-800 post-reply-card-content">{{ reply.content }}</p>
+                        </div>
+                    {% endfor %}
+                </div>
             </div>
         </div>
-    </div>
-    <div id="edit-reply-modal"
-         class="hidden fixed inset-0 z-[80] overflow-y-auto flex items-center justify-center"
-         role="dialog">
-        <!-- Backdrop -->
-        <div class="fixed inset-0 bg-black bg-opacity-65"></div>
-        <!-- Modal Content -->
-        <div class="relative z-10 w-full max-w-lg mx-4 bg-white shadow-lg rounded-xl">
-            <div class="flex items-center justify-between p-4 border-b">
-                <h3 class="font-bold text-gray-800">Edit Reply</h3>
-                <button type="button"
-                        class="text-gray-400 hover:text-gray-600"
-                        id="edit-reply-modal-close-btn">
-                    <span class="sr-only">Close</span>
-                    <svg class="w-6 h-6"
-                         xmlns="http://www.w3.org/2000/svg"
-                         fill="none"
-                         viewBox="0 0 24 24"
-                         stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 6L6 18M6 6l12 12" />
-                    </svg>
-                </button>
-            </div>
-            <div class="p-4">
-                <form id="edit-reply-form">
-                    <div class="mb-4">
-                        <label for="rep_content" class="block text-sm font-medium text-gray-700">Reply</label>
-                        <textarea id="rep_content"
-                                  name="content"
-                                  rows="4"
-                                  required
-                                  class="block w-full p-2 mt-1 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-blue-300"></textarea>
-                    </div>
-                </form>
-            </div>
-            <div class="flex items-center justify-end p-4 border-t">
-                <button type="submit"
-                        form="edit-reply-form"
-                        class="px-3 py-2 ml-2 text-sm font-medium text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:outline-none focus:bg-blue-700">
-                    Save
-                </button>
+        <div id="edit-reply-modal"
+             class="hidden fixed inset-0 z-[80] overflow-y-auto flex items-center justify-center"
+             role="dialog">
+            <!-- Backdrop -->
+            <div class="fixed inset-0 bg-black bg-opacity-65"></div>
+            <!-- Modal Content -->
+            <div class="relative z-10 w-full max-w-lg mx-4 bg-white shadow-lg rounded-xl">
+                <div class="flex items-center justify-between p-4 border-b">
+                    <h3 class="font-bold text-gray-800">Edit Reply</h3>
+                    <button type="button"
+                            class="text-gray-400 hover:text-gray-600"
+                            id="edit-reply-modal-close-btn">
+                        <span class="sr-only">Close</span>
+                        <svg class="w-6 h-6"
+                             xmlns="http://www.w3.org/2000/svg"
+                             fill="none"
+                             viewBox="0 0 24 24"
+                             stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18 6L6 18M6 6l12 12" />
+                        </svg>
+                    </button>
+                </div>
+                <div class="p-4">
+                    <form id="edit-reply-form">
+                        <div class="mb-4">
+                            <label for="rep_content" class="block text-sm font-medium text-gray-700">Reply</label>
+                            <textarea id="rep_content"
+                                      name="content"
+                                      rows="4"
+                                      required
+                                      class="block w-full p-2 mt-1 border border-gray-300 rounded-md focus:outline-none focus:ring focus:ring-blue-300"></textarea>
+                        </div>
+                    </form>
+                </div>
+                <div class="flex items-center justify-end p-4 border-t">
+                    <button type="submit"
+                            form="edit-reply-form"
+                            class="px-3 py-2 ml-2 text-sm font-medium text-white bg-blue-600 rounded-lg hover:bg-blue-700 focus:outline-none focus:bg-blue-700">
+                        Save
+                    </button>
+                </div>
             </div>
         </div>
     </div>
@@ -147,7 +151,7 @@
                 const reply = json.data
                 const repliesDiv = document.querySelector("#replies");
                 repliesDiv.innerHTML += `
-                    <div class="space-y-2.5 p-4 border border-gray-200 rounded-md post-reply-card" data-reply-id="${reply.id}">
+                    <div class="space-y-2.5 p-4 border border-gray-200 rounded-md post-reply-card bg-white" data-reply-id="${reply.id}">
                         <h6 class="flex items-center text-xs text-gray-500">
                             <span class="font-bold text-black">${reply.user}</span>
                             <span class="mx-1">•</span>
